<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:background="@color/Background"
tools:context=".activities.Login">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="411dp"
        android:layout_height="366dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/sign_in"
        android:textColor="@color/Black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/phone_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage"
        app:layout_constraintVertical_bias="0.300" />

    <EditText
        android:id="@+id/phone_ET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/medium"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textColor="@color/FontColor"
        android:textColorHint="@color/FontColor"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        tools:ignore="RtlSymmetry" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_ET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <Button
            android:id="@+id/sign_up_next"
            android:layout_width="313dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/round_corner"
            android:ems="10"
            android:fontFamily="@font/medium"
            android:text="@string/request_otp"
            android:textColor="@color/White"
            app:backgroundTint="@color/Primary" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
