<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/Background"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/bold"
        android:text="Edit Profile"
        android:textColor="@color/Black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/avatar"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/name_ET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/medium"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/FontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/email_ET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:fontFamily="@font/medium"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@color/FontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_ET" />

    <EditText
        android:id="@+id/age_ET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/medium"
        android:hint="@string/age"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textColor="@color/FontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_ET"
        tools:ignore="RtlSymmetry" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/regular"
        android:hint="@string/gender"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_ET" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="@id/save_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/save_data">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </FrameLayout>

    <Button
        android:id="@+id/save_data"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/medium"
        android:text="Save"
        android:textColor="@color/White"
        app:backgroundTint="@color/Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender" />

</androidx.constraintlayout.widget.ConstraintLayout>