<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/Background"
    android:orientation="vertical"
    tools:context=".activities.SignUp2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/sign_upTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/sign_up"
            android:textColor="@color/Black"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:textSize="30sp" />

    </LinearLayout>
    <EditText
        android:id="@+id/pincode_ET"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/medium"
        android:hint="@string/pincode"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/FontColor"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/interest_ET"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/round_corner"
            android:ems="10"
            android:fontFamily="@font/medium"
            android:hint="@string/interest"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:layout_marginLeft="36dp"
            android:textColor="@color/FontColor"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:layout_marginLeft="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_keyword" />

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add" />

    <Button
        android:id="@+id/button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="Show Selections"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/round_corner"
            android:fontFamily="@font/medium"
            android:text="@string/sign_up"
            android:textColor="@color/White"
            app:backgroundTint="@color/Primary"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="511dp" />

    </FrameLayout>

</LinearLayout>